--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   
   body {
     background-color: green;
-    font-family: 
+    font-family;
+    background-image: url(https://media.timeout.com/images/105658075/image.jpg);
+    width: 200px; 
   }
 
   h1 {
@@ -32,7 +34,9 @@
     color:red;
   }
   
-  
+  img { 
+  width: 500px;
+  }
   
   
   
@@ -62,3 +66,5 @@
   Why does this automatically make
   space infront of sentences
 </p>
+  <img src="https://media.timeout.com/images/105658075/image.jpg" 
+       alt="a cute cat">
