--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   body {
     background-color: green;
     font-family;
-    background-image: url(https://media.timeout.com/images/105658075/image.jpg);
-    width: 200px; 
+    background-image: u rl(https://media.timeout.com/images/105658075/image.jpg);
+    background-size:cover
   }
 
   h1 {
